Another possible fix for boxed background on inputs on iPhone

--- a/otvoreni_akti/apps/search/static/search/main.css
+++ b/otvoreni_akti/apps/search/static/search/main.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    -webkit-appearance: none;
 }
 
 :root {
@@ -152,7 +153,6 @@ form {
     background-color: var(--purple-dark-color);
     border-radius: 40px;
     color: #FFFFFF;
-    -webkit-tap-highlight-color: transparent;
 }
 
 .search_metadata > select {
